<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:background="@color/white">

  <EditText
    android:id="@+id/skin_id"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:hint="@string/dst_skin_id_hint"/>

  <EditText
    android:id="@+id/skin_name"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="@dimen/dst_vertical_margin_small"
    android:hint="@string/dst_skin_name_hint"/>

  <EditText
    android:id="@+id/skin_prefab"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="@dimen/dst_vertical_margin_small"
    android:hint="@string/dst_prefab_name_hint"/>

  <EditText
    android:id="@+id/skin_type"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="@dimen/dst_vertical_margin_small"
    android:hint="@string/dst_skin_type_hint"
    android:inputType="number" />

  <EditText
    android:id="@+id/skin_price"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="@dimen/dst_vertical_margin_small"
    android:hint="@string/dst_skin_unlock_price_hint"
    android:inputType="number" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <Button
      android:id="@+id/skin_register"
      style="@style/DstBtnStyle"
      android:layout_width="150dp"
      android:text="@string/dst_skin_register" />

    <Button
      android:id="@+id/skin_update"
      style="@style/DstBtnStyle"
      android:layout_width="150dp"
      android:layout_marginStart="30dp"
      android:text="@string/dst_skin_update" />
  </LinearLayout>


</LinearLayout>