<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingHorizontal="10dp"
  android:background="@color/white">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dst_skin_unlock_notice"
        android:textColor="#0000ff" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skin_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_weight="1"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/query"
          style="@style/DstBtnStyle"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:text="@string/dst_search" />

        <EditText
          android:id="@+id/query_info"
          style="@style/DstEditText"
          android:layout_width="0dp"
          android:layout_weight="3"
          android:layout_marginStart="5dp"
          android:hint="@string/dst_prefab_name_hint" />
      </LinearLayout>

      <Button
        android:id="@+id/select_all"
        style="@style/DstBtnStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/dst_select_all" />

      <EditText
        android:id="@+id/userid"
        style="@style/DstEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:hint="@string/dst_userid_hint" />

      <EditText
        android:id="@+id/price"
        style="@style/DstEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/dst_skin_unlock_price_hint"
        android:inputType="number" />

      <EditText
        android:id="@+id/extra"
        style="@style/DstEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/dst_skin_unlock_extra_hint" />

      <Button
        android:id="@+id/unlock"
        style="@style/DstBtnStyle"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/dst_btn_bg_red"
        android:text="@string/dst_skin_unlock_sure" />
    </LinearLayout>
  </LinearLayout>


</LinearLayout>