<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:gravity="center"
  android:orientation="vertical">

  <EditText
    android:id="@+id/skin_id"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:hint="@string/dst_skin_id_hint" />

  <EditText
    android:id="@+id/userid"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="10dp"
    android:hint="@string/dst_userid_hint" />

  <Button
    android:id="@+id/query"
    style="@style/DstBtnStyle"
    android:layout_width="200dp"
    android:layout_marginTop="10dp"
    android:text="@string/dst_sure" />
</LinearLayout>