<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  android:background="@color/white">

  <ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_marginTop="-150dp"
    android:src="@drawable/dst_icon_round" />

  <EditText
    android:id="@+id/username"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="30dp"
    android:hint="@string/dst_username_hint"
    android:inputType="text" />

  <EditText
    android:id="@+id/password"
    style="@style/DstEditText"
    android:layout_width="200dp"
    android:layout_marginTop="@dimen/dst_vertical_margin_small"
    android:hint="@string/dst_password_hint"
    android:inputType="textPassword" />

  <Button
    android:id="@+id/login"
    style="@style/DstBtnStyle"
    android:layout_width="200dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/dst_btn_bg_red"
    android:text="@string/dst_login" />
</LinearLayout>